@@ -65,12 +65,18 @@
 
 	<div class="search_input_wrap"><div class="search_icon"><img src="/art/original/search_icon.png" width="30" height="30"/></div><input type="text" id="view_search_string_only" class="typeahead" placeholder="{search2_placeholder_txt}"/></div>
 	
+	<div class="feedback_links_wrap">
+		<a onclick="$('.search_filter').toggle();" class="feedback_txt">Show Filters?</a>
+	</div>
+	
+	{view_search2_filters_wrap}
+	
 </div>
 
 
 #view_search_test
 <div id="view_search_test">
-	{view_search_filters}
+	{view_search_filters_wrap}
 	<div id="search_div"><span id="addfilter_span"></span><span id="result_span"></span><a id="search_link" class="search_link_disable">{search_button1_txt}</a></div>
 
 	<div class="search_input_wrap"><div class="search_icon"><img src="/art/original/search_icon.png" width="30" height="30"/></div><input type="text" id="view_search_string" class="typeahead" placeholder="{search_placeholder_txt}"/></div>
@@ -78,62 +84,72 @@
 </div>
 
 
-#view_search_filters
+#view_search2_filters_wrap
+<div class="search_filter" style="display:none; margin-top:40px;">
+	{filter_head_text}	
+	{view_search_filters}
+	<div id="search_div"><span id="addfilter_span"></span><span id="result_span"></span><a id="search_link" class="search_link_disable">{search_button1_txt}</a></div>
+</div>
+
+#view_search_filters_wrap
 <div class="search_filter">
-		{filter_head_text}
-		<div class="search_wrap">
-			<div class="search_label">
-				<img src="{flava}search_country.png" alt="Recipient icon" width="13" height="13"/>{search_recipient_txt}
-			</div>
-			<select id="view_search_select_country" class="chosen">
-				<option value></option>
-				{search_options_country}
-			</select>
-		</div><div class="search_wrap">
-			<div class="search_label">
-				<img src="{flava}search_funder.png" alt="Funder icon" width="13" height="13"/>{search_donor_txt}
-			</div>
-			<select id="view_search_select_funder" class="chosen">
-				<option value></option>
-				{search_options_funder}
-			</select>
-		</div><div class="search_wrap">
-			<div class="search_label">
-				<img src="{flava}search_category.png" alt="Sector Category icon" width="13" height="13"/>{search_sectorcategory_txt}
-			</div>
-			<select id="view_search_select_category" class="chosen">
-				<option value></option>
-				{search_options_category}
-			</select>
-		</div><div class="search_wrap">
-			<div class="search_label">
-				<img src="{flava}search_sector.png" alt="Sector icon" width="13" height="13"/>{search_sector_txt}
-			</div>
-			<select id="view_search_select_sector" class="chosen">
-				<option value></option>
-				{search_options_sector}
-			</select>
-		</div><div class="search_wrap">
-			<div class="search_label">
-				<img src="{flava}search_publisher.png" alt="Publisher icon" width="13" height="13"/>{search_publisher_txt}
-			</div>
-			<select id="view_search_select_publisher" class="chosen">
-				<option value></option>
-				{search_options_publisher}
-			</select>
-		</div><div class="search_wrap mini">
-			<div class="search_label">
-				<img src="{flava}search_year.png" alt="Year icon" width="13" height="13"/>{search_year_txt}
-			</div>
-			<select id="view_search_select_year_min" class="chosen">
-				<option value></option>
-				{search_options_year}
-			</select><select id="view_search_select_year_max" class="chosen">
-				<option value></option>
-				{search_options_year}
-			</select>
-		</div>
+	{filter_head_text}	
+	{view_search_filters}
+</div>
+
+#view_search_filters
+<div class="search_wrap">
+	<div class="search_label">
+		<img src="{flava}search_country.png" alt="Recipient icon" width="13" height="13"/>{search_recipient_txt}
 	</div>
+	<select id="view_search_select_country" class="chosen">
+		<option value></option>
+		{search_options_country}
+	</select>
+</div><div class="search_wrap">
+	<div class="search_label">
+		<img src="{flava}search_funder.png" alt="Funder icon" width="13" height="13"/>{search_donor_txt}
+	</div>
+	<select id="view_search_select_funder" class="chosen">
+		<option value></option>
+		{search_options_funder}
+	</select>
+</div><div class="search_wrap">
+	<div class="search_label">
+		<img src="{flava}search_category.png" alt="Sector Category icon" width="13" height="13"/>{search_sectorcategory_txt}
+	</div>
+	<select id="view_search_select_category" class="chosen">
+		<option value></option>
+		{search_options_category}
+	</select>
+</div><div class="search_wrap">
+	<div class="search_label">
+		<img src="{flava}search_sector.png" alt="Sector icon" width="13" height="13"/>{search_sector_txt}
+	</div>
+	<select id="view_search_select_sector" class="chosen">
+		<option value></option>
+		{search_options_sector}
+	</select>
+</div><div class="search_wrap">
+	<div class="search_label">
+		<img src="{flava}search_publisher.png" alt="Publisher icon" width="13" height="13"/>{search_publisher_txt}
+	</div>
+	<select id="view_search_select_publisher" class="chosen">
+		<option value></option>
+		{search_options_publisher}
+	</select>
+</div><div class="search_wrap mini">
+	<div class="search_label">
+		<img src="{flava}search_year.png" alt="Year icon" width="13" height="13"/>{search_year_txt}
+	</div>
+	<select id="view_search_select_year_min" class="chosen">
+		<option value></option>
+		{search_options_year}
+	</select><select id="view_search_select_year_max" class="chosen">
+		<option value></option>
+		{search_options_year}
+	</select>
+</div>
 
 
 #filter_head_text
