@@ -5,6 +5,8 @@ Removed filters and country portals
 Removed compare buttons
 Updated css fixes
 Removed search button
+Updated translations
+Added filters as option for search2
 
 
 Development Portal (2016-11-29 shi)
